CME-34: upgrade to java 21